src/objects/Go_Cardless__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Api_Token__c</fullName>
        <label>Api Token</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Api_Url__c</fullName>
        <label>Api Url</label>
        <length>35</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Api_Version__c</fullName>
        <label>Api Version</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Go Cardless</label>
</CustomObject>